# circyto

./: .gitignore  CHANGELOG.md  E-MTAB-6072.idf.txt  LICENSE  README.md  ROADMAP.md  circyto_patch_multidetector.sh  fastq_urls.txt  make_fastq_urls.py  manifest.tsv  manifest_2.tsv  pyproject.toml
.github/workflows/: ci.disabled.yml  ci.yml  test.yml  test.yml.disabled
circyto/: init.py  utils.py
circyto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
circyto/analysis/: compare_detectors.py
circyto/cli/: circyto.py  detectors.py  doctor.py  doctor_meta.py
circyto/compare/: __init__.py  detector_compare.py
circyto/detectors/: __init__.py  base.py  circ_explorer2.py  circexplorer2_adapter.py  ciri2.py  ciri_full.py  ciri_long.py  find_circ.py  find_circ3.py  find_circ3_adapter.py  install_tools.py
circyto/parsers/: cirifull.py
circyto/pipeline/: annotate_host_gene.py  collect.py  collect_circexplorer2.py  collect_circexplorer2_matrix.py  collect_find_circ3.py  compare_detectors.py  export_multimodal.py  merge_detectors.py  merge_results.py  multidetector_collect.py  prepare.py  run_cirifull.py  run_detector.py  run_multidetector.py
circyto/writers/: convert.py
docs/: ciri_full_chr21_example.md  cli_policy.md  detectors.md  getting_started.md  index.md  multidetector.md
tests/: cells.tsv  ciri_full_integration_full.md  mini_R1.fastq  mini_R2.fastq  run_tests.sh  test_annotate_host_gene.py  test_circexplorer2_chr21_manifest2_integration.py  test_circexplorer2_integration.py  test_cirifull_chr21_integration.py  test_cli.sh  test_collect_circexplorer2_matrix.py  test_compare_detectors.py  test_compare_detectors_basic.py  test_compare_detectors_normalization.py  test_detectors_base.py  test_export_multimodal.py  test_find_circ3_integration.py  test_merge_detectors.py  test_multidetector_demo.py  test_regression_chr21_manifest2_fuzzy.py  test_run_detector_basic.py  test_run_multidetector.py  test_run_multidetector_basic.py
tests/find_circ3_manifest2_integration/: cell_index.txt  circ_counts.mtx
tools/: circyto_autofix_indent.py  collect_find_circ3_manifest2.py  install_ciri_full.sh
tools/CIRI-full/: CIRI-full
tools/CIRI-full_v2.0/: CIRI-full_manual.txt
tools/CIRI-full_v2.0/CIRI-full_test/: test_ref.fa.amb  test_ref.fa.ann
tools/CIRI-full_v2.0/CIRI-full_test/old_test/: test.log2  test_AS.list  test_ro1.sam  test_ro1_align.txt  test_ro2.sam  test_ro2_info.list  test_splice.list
tools/CIRI-full_v2.0/CIRI-full_test/stdir/: stout.list
tools/CIRI-full_v2.0/CIRI-full_test/test_output/: tmp1.sh  tmp2.sh
tools/CIRI-full_v2.0/CIRI-full_test/test_output/CIRI-AS_output/: testunset.list  testunset.log2  testunset_AS.list  testunset_splice.list
tools/CIRI-full_v2.0/src/CIRI-vis_v1.2.2/: .classpath  .project
tools/CIRI-full_v2.0/src/CIRI_Full_v2.0/: .project
work_pbmc_v3/: cell_index.txt
work_smartseq2/: cell_index.txt
work_smartseq2/cirifull_out/: cell3.tsv
(+27 files in other folders)
