[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "circyto"
version = "0.3.0"
description = "circyto.py — Run CIRI-full for plate scRNA-seq (manifest) and 10x (3'/5') to produce circ×cell, .loom/.h5ad."
readme = "README.md"
license = {text = "MIT"}
authors = [{name="James Liu", email="example@example.com"}]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pysam>=0.22.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "loompy>=3.0.7",
  "anndata>=0.10.5",
  "joblib>=1.3.0"
]

[project.scripts]
circyto = "circyto.cli.circyto:app"
[project.optional-dependencies]
detectors = [
  "CIRCexplorer2",
  "biopython",
  "pysam",
  "requests",
  "numpy",
  "pandas"
]
