[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circyto"
version = "0.3.0"
description = "circyto.py — CIRI-full wrapper for plate scRNA-seq (manifest) and 10x (3'/5') to produce circ×cell matrices and Loom/H5AD"
readme = "README.md"
license = "MIT"  # ← use SPDX-like string, fixes warning
authors = [{name="James Liu", email="example@example.com"}]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pysam>=0.22.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "loompy>=3.0.7",
  "anndata>=0.10.5",
  "joblib>=1.3.0"
]

[project.scripts]
circyto = "circyto.cli.circyto:app"

[project.optional-dependencies]
detectors = [
  "CIRCexplorer2",
  "biopython",
  "pysam",
  "requests",
  "numpy",
  "pandas"
]

# >>> Tell setuptools to ONLY package the 'circyto' package
[tool.setuptools.packages.find]
where = ["."]
include = ["circyto*"]
exclude = ["tests*", "assets*", "paper*", "docs*", "examples*", ".*"]
