[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circyto"
version = "0.3.2"
description = "A Python CLI toolkit for single-cell circRNA detection, merging, and conversion."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "James Liu" }]
license = "MIT"

dependencies = [
  "typer>=0.9,<1.0",
  "rich>=13.0",
  "tqdm>=4.66",
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
loom = ["loompy>=3.0"]
h5ad = ["anndata>=0.9"]

[project.scripts]
circyto = "circyto.cli.circyto:app"

[project.urls]
Homepage = "https://github.com/liuifrec/circyto"
Issues   = "https://github.com/liuifrec/circyto/issues"

# ---- limit package discovery to the actual code ----
[tool.setuptools.packages.find]
include = ["circyto", "circyto.*"]
exclude = ["tests*", "fastq*", "ref*", "assets*", "work_*", "data*", ".github*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
circyto = ["**/*.txt", "**/*.sh"]
